--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="keywords" content="Yoga, for Every Body" />
     <meta name="description" content="" />
-    <title>SONiC!!</title>
-    <link rel="stylesheet" href="/static/nicepage.css" media="screen" />
-    <link rel="stylesheet" href="/static/Page-13.css" media="screen" />
+    <title>Gallatin</title>
+    <link rel="stylesheet" href="{{ url_for('static',filename='nicepage.css') }}" media="screen" />
+    <link rel="stylesheet" href="{{ url_for('static',filename='Page-13.css') }}" media="screen" />
     <script
       class="u-script"
       type="text/javascript"
